@@ -1,3 +1,12 @@
+2007-03-010  Vitaly Alexeev <tishka92@yahoo.com>
+
+	* gameswf/win32/VC8/gameswf.vcproj: dlmalloc.(c,h) are removed from project
+	because there are enough VC8++ toolkit
+	* gameswf/gameswf_netstream.(cpp,h): removed useless struct netstream
+	* gameswf/gameswf.h,
+	* gameswf/gameswf_video_impl.cpp,
+	* gameswf/gameswf_sound_handler.(cpp,h): void* ==> as_object_interface
+
 2007-03-04  Vitaly Alexeev <tishka92@yahoo.com>
 
 	* gameswf/gameswf.h: class video_stream_instance ==> struct ...
